--- a/assets/translations/ar-AE.json
+++ b/assets/translations/ar-AE.json
@@ -85,7 +85,27 @@
     "addaddress": "إضافة عنوان",
     "phonemust": "يجب أن يتكون رقم الهاتف من 10 أرقام",
     "validation": "خطأ في التحقق",
-    "getaddress": "الحصول على العنوان"
+    "getaddress": "الحصول على العنوان",
+    "placeorder":"قم بوضع طلبك",
+    "noaddressavailable": "لا يوجد عنوان متاح",
+    "camera": "شاشة الكاميرا",
+    "fourfingerinformation": "تم حفظ قياسات أصابعك الأربعة بنجاح! يرجى التقاط صورة للإبهام!",
+    "capturethumb": "التقاط صورة للإبهام",
+    "fivefinger": "تم حفظ قياسات جميع أصابعك الخمسة بنجاح!",
+    "gotoshop": "الذهاب للتسوق",
+    "somefields": "يبدو أن هناك بعض الحقول مفقودة. يرجى ملء جميع الحقول المطلوبة قبل المتابعة.",
+    "orderrr": "طلب",
+    "fourfingerinstruction": "يرجى وضع أصابعك الأربعة على خلفية مسطحة مثل هذه أثناء المسح.",
+    "fourfingerinstruction2": "ثم التقط الصورة من أقرب مسافة للحصول على دقة في القياس.",
+   
+    "thumbinstruction": "يرجى وضع الإبهام على خلفية مسطحة مع إخفاء الأصابع الأخرى، مثل هذا، أثناء المسح.",
+    "thumbinstruction2": "ثم التقط الصورة من أقرب مسافة للحصول على دقة في القياس.",
+    "paymentunsuccesful": "فشل الدفع، يرجى المحاولة مرة أخرى لاحقًا.",
+    "continueshopping": "استمر في التسوق",
+    "addedtocart": "تمت الإضافة إلى السلة",
+    "gotocart": "اذهب إلى السلة",
+    "description": "الوصف",
+    "successdialogue": "تم تقديم طلبك بنجاح!"
     
     
     
